v0.07.3
* Updated examples
* Moved scene parsers to plugin system
* Moved photon maps to plugin system
* Replaced object factories with PluginRegistry lookups
* Updated all parsers
* Added PluginRegistry and modified SunflowAPI to create objects through it instead of requiring users to create objects themselves
* Changed cornellbox primitive into the light block in the .sc parser
* Light objects can now specify their geometric represtentation at runtime
* Particle point positions can now be specified inline in the scene file
* Particle data files can now be scene relative (via include paths)
* Improved motion blur sampling
* Moved shaderOverride to an option

v0.07.2
* Filled in and corrected javadoc comments in org.sunflow.core package
* Upgraded to Janino 2.5.5
* Added experimental Ant build file
* Removed hard coded sRGB curve
* Fixes to bucket renderer anti-aliasing
* Camera motion blur
* Added bezier patch meshes to parser
* Added normal smoothing to FileMesh
* Implemented BVH2 case properly in BoundingIntervalHierarchy (needs benchmarking)
* Added binary STL format to FileMesh
* Upgraded to Janino 2.5.4
* Improvements to Geometry class to handle tesselation failures
* Created FileMesh class for on-demand loading of meshes (supports RA3/OBJ)
* Tweaks to Benchmark class for third parties
* Small bugfixes
* Added little_endian option for particle files

v0.07.1
* Added Modifier concept - used to implement bump/normal mapping at the moment
* Added bucket dumping debugging option to bucket render - saves out unfiltered buckets as they are rendered
* Fixed jitter option - added to SCParser image block
* Added basic absorbtion model to GlassShader
* Added ngon sampling to ThinLens for bokeh effects
* Renamed MeshLight to TriangleMeshLight
* Updated LightSource interface - lights must now do their own loop to take mutltiple samples
* Spherical triangle sampling for triangle lights
* New wireframe shader (-quick_wire command line option)